@@ -3,7 +3,9 @@ ____________________________________________
 Zelda XD2: Mercuris Chess 1.0.4 (2017-04-06)
 ____________________________________________
 
+* Add a statistics screen at the end (#52).
 * Fix hearts not displayed in the savegame menu.
+* Fix stuck after the fight against Zelda's cat (#54).
 * Fix rupee island accessible without flippers (#67).
 * Fix running not inflicting twice damage (#77).
 * Allow to enter the lost and found office from outside (#7).
